<resources>
    <string name="app_name">AndroidFundamentalsGroup1</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="search_for_names">Search for names</string>
    <string name="our_first_textview">Our first TextView</string>
    <string name="i_am_a_button">I am a button</string>
    <string name="full_name">Full name</string>
    <string name="i_accept_t_and_c">I accept T and C</string>
    <string name="first_text">first text</string>
    <string name="second_text">second text</string>
    <string name="new_text">This is the new text</string>
    <string name="default_full_name">Magda Miu</string>
    <string name="checkbox_checked">Checkbox was checked</string>
    <string name="checkbox_unchecked">Checkbox was unchecked</string>
    <string name="checkbox_state_checked">Checkbox checked</string>
    <string name="checkbox_state_unchecked">Checkbox unchecked</string>
    <string name="error_missing_text">Please add some text</string>
    <string name="top_long_text">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device launched in September 2008.  It is free and open source software; its source code is known as Android Open Source Project (AOSP), which is primarily licensed under the Apache License. However most Android devices ship with additional proprietary software pre-installed,[10] most notably Google Mobile Services (GMS)[11] which includes core apps such as Google Chrome, the digital distribution platform Google Play and associated Google Play Services development platform. About 70 percent of Android smartphones run Google\'s ecosystem;[12] competing Android ecosystems and forks include Fire OS (developed by Amazon) or LineageOS. However the \"Android\" name and logo are trademarks of Google which impose standards to restrict \"uncertified\" devices outside their ecosystem to use Android branding</string>
    <string name="bottom_long_text">The source code has been used to develop variants of Android on a range of other electronics, such as game consoles, digital cameras, portable media players, PCs and others, each with a specialized user interface. Some well known derivatives include Android TV for televisions and Wear OS for wearables, both developed by Google. Software packages on Android, which use the APK format, are generally distributed through proprietary application stores like Google Play Store, Samsung Galaxy Store, and Huawei AppGallery, or open source platforms like Aptoide or F-Droid.  Android has been the best-selling OS worldwide on smartphones since 2011 and on tablets since 2013. As of May 2017, it has over two billion monthly active users, the largest installed base of any operating system, and as of August 2020, the Google Play Store features over 3 million apps.[15] The current stable version is Android 11, released on September 8, 2020.</string>
    <string name="select_an_android_version">Select an Android version</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="not_yet_submitted">Not yet submitted</string>
</resources>
